[tool.poetry]
name = "story_production_crew"
version = "0.1.0"
description = "a Story and Script production crew"
authors = ["Ishmam Ahmed Solaiman"]

[tool.poetry.dependencies]
openai = "*"
python = ">=3.10.0, <3.12"
crewai = "*"
unstructured = "==0.10.2"
tools="^0.1.9"
python-dotenv = "1.0.0"
tiktoken = "0.5.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["W291", "W292", "W293"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"